# Hyprland-keyboard-plugin

./: CMakeLists.txt  modkey-trigger.cpp
